--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,11 @@
 PRG            = ecu
-OBJ            = ecu.o uart.o timers.o rpm.o injection.o inputs.o
-HDR            = config.h uart.h timers.h rpm.h injection.h inputs.h
+OBJ            = ecu.o uart.o timers.o rpm.o injection.o inputs.o twimaster.c bme280.c
+HDR            = config.h uart.h timers.h rpm.h injection.h inputs.h i2cmaster.h bme280.h bme280_defs.h
 MCU_TARGET     = atmega328p
 OPTIMIZE       = -O2
 
-#AVRDUDE_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A602QP81-if00-port0
-AVRDUDE_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A602K6GX-if00-port0
+AVRDUDE_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A602QP81-if00-port0
+#AVRDUDE_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A602K6GX-if00-port0
 #AVRDUDE_PORT   = /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0
 
 AVRDUDE_DEVICE = arduino
