bigger map, compute default map, fix humidity

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,7 +20,7 @@ CC             = avr-gcc
 # Override is only needed by avr-lib build system.
 
 override CFLAGS        = -g -std=c99 -Wall $(OPTIMIZE) -mmcu=$(MCU_TARGET) $(DEFS)
-override LDFLAGS       = -Wl,-Map,$(PRG).map
+override LDFLAGS       = -Wl,-Map,$(PRG).map,-u,vfprintf -lprintf_flt -lm
 
 OBJCOPY        = avr-objcopy
 OBJDUMP        = avr-objdump
