changed injection max duration. some refactoring

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 PRG            = ecu
 OBJ            = ecu.o uart.o timers.o rpm.o injection.o inputs.o twimaster.c bme280.c max6675.c config.c log.c
-HDR            = ecu.h config.h uart.h timers.h rpm.h injection.h inputs.h i2cmaster.h bme280.h bme280_defs.h max6675.h log.h
+HDR            = ecu.h config.h emu_types.h uart.h timers.h rpm.h injection.h inputs.h i2cmaster.h bme280.h bme280_defs.h max6675.h log.h
 MCU_TARGET     = atmega328p
-OPTIMIZE       = -O2
+OPTIMIZE       = -Os
 
 AVRDUDE_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A602QP81-if00-port0
 #AVRDUDE_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A602K6GX-if00-port0
