--- a/src/Makefile
+++ b/src/Makefile
@@ -19,7 +19,7 @@ CC             = avr-gcc
 
 # Override is only needed by avr-lib build system.
 
-override CFLAGS        = -g -std=c99 -Wall $(OPTIMIZE) -mmcu=$(MCU_TARGET) $(DEFS)
+override CFLAGS        = -g -std=c99 -Wall -Werror $(OPTIMIZE) -mmcu=$(MCU_TARGET) $(DEFS)
 override LDFLAGS       = -Wl,-Map,$(PRG).map,-u,vfprintf -lprintf_flt -lm
 
 OBJCOPY        = avr-objcopy
