allow environemnt override of AVRDUDE_PORT

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ HDR            = ecu.h config.h emu_types.h uart.h timers.h rpm.h injection.h in
 MCU_TARGET     = atmega328p
 OPTIMIZE       = -Os
 
-AVRDUDE_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A602QP81-if00-port0
+AVRDUDE_PORT   ?= /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A602QP81-if00-port0
 #AVRDUDE_PORT   = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A602K6GX-if00-port0
 #AVRDUDE_PORT   = /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0
 
